Fixed auth icon

--- a/idea/auth/signIn.page.html
+++ b/idea/auth/signIn.page.html
@@ -7,7 +7,7 @@
     >
       <ion-img
         [title]="t.instant('IDEA.AUTH.SERVICE_LOGO')"
-        [src]="'assets/icons/icon-alt.png'"
+        [src]="'assets/icons/icon-auth.png'"
       ></ion-img>
       <ion-card-header>
         <ion-card-title
