Improved auth interaction with password managers

--- a/idea/auth/confirmPassword.page.html
+++ b/idea/auth/confirmPassword.page.html
@@ -42,7 +42,7 @@
             spellcheck="false"
             autocorrect="off"
             autocapitalize="off"
-            autocomplete="username"
+            autocomplete="email"
             [placeholder]="t.instant('IDEA.AUTH.EMAIL')"
             [title]="t.instant('IDEA.AUTH.EMAIL_HINT')"
             [ngModelOptions]="{standalone: true}"
@@ -88,6 +88,7 @@
             autocorrect="off"
             autocapitalize="off"
             autocomplete="new-password"
+            [clearOnEdit]="false"
             [placeholder]="t.instant('IDEA.AUTH.NEW_PASSWORD')"
             [title]="t.instant('IDEA.AUTH.CHOOSE_A_PASSWORD')"
             [ngModelOptions]="{standalone: true}"
