--- a/idea/auth/newPassword.page.html
+++ b/idea/auth/newPassword.page.html
@@ -41,6 +41,7 @@
             autocorrect="off"
             autocapitalize="off"
             autocomplete="new-password"
+            [clearOnEdit]="false"
             [placeholder]="t.instant('IDEA.AUTH.PASSWORD')"
             [title]="t.instant('IDEA.AUTH.CHOOSE_A_PASSWORD')"
             [ngModelOptions]="{standalone: true}"
