--- a/idea/auth/signIn.page.html
+++ b/idea/auth/signIn.page.html
@@ -50,7 +50,7 @@
               spellcheck="false"
               autocorrect="off"
               autocapitalize="off"
-              autocomplete="username"
+              autocomplete="email"
               [placeholder]="t.instant('IDEA.AUTH.EMAIL')"
               [title]="t.instant('IDEA.AUTH.EMAIL_HINT')"
               [ngModelOptions]="{standalone: true}"
@@ -68,12 +68,14 @@
               ></ion-icon>
             </ion-label>
             <ion-input
+              id="current-password"
               type="password"
               pattern=".{8,}"
               spellcheck="false"
               autocorrect="off"
               autocapitalize="off"
               autocomplete="current-password"
+              [clearOnEdit]="false"
               [placeholder]="t.instant('IDEA.AUTH.PASSWORD')"
               [title]="t.instant('IDEA.AUTH.PASSWORD_HINT')"
               [ngModelOptions]="{standalone: true}"
