--- a/idea/auth/signUp.page.html
+++ b/idea/auth/signUp.page.html
@@ -66,6 +66,7 @@
             autocorrect="off"
             autocapitalize="off"
             autocomplete="off"
+            [clearOnEdit]="false"
             [placeholder]="t.instant('IDEA.AUTH.PASSWORD')"
             [title]="t.instant('IDEA.AUTH.CHOOSE_A_PASSWORD')"
             [ngModelOptions]="{standalone: true}"
