--- a/idea/auth/resendLink.page.html
+++ b/idea/auth/resendLink.page.html
@@ -42,7 +42,7 @@
             spellcheck="false"
             autocorrect="off"
             autocapitalize="off"
-            autocomplete="username"
+            autocomplete="email"
             [placeholder]="t.instant('IDEA.AUTH.EMAIL')"
             [title]="t.instant('IDEA.AUTH.EMAIL_HINT')"
             [ngModelOptions]="{standalone: true}"
