--- a/idea/auth/confirmPassword.page.html
+++ b/idea/auth/confirmPassword.page.html
@@ -1,39 +1,22 @@
 <ion-content>
-  <form
-    class="flexBox"
-  >
-    <ion-card
-      class="authCard"
-    >
+  <form class="flexBox">
+    <ion-card class="authCard">
       <ion-card-header>
-        <ion-card-title
-          color="primary"
-        >
+        <ion-card-title color="primary">
           {{ 'IDEA.AUTH.CHANGE_THE_PASSWORD' | translate }}
         </ion-card-title>
         <ion-card-subtitle>
-          {{ 'IDEA.AUTH.CHANGE_THE_PASSWORD_HINT' | translate:{ 'n': 8 } }}
+          {{ 'IDEA.AUTH.CHANGE_THE_PASSWORD_HINT' | translate: { n: 8 } }}
         </ion-card-subtitle>
       </ion-card-header>
       <ion-card-content>
-        <p
-          class="errorBox"
-          *ngIf="errorMsg"
-        >
-          <b>
-            {{ 'IDEA.AUTH.ERROR' | translate }}.
-          </b>
+        <p class="errorBox" *ngIf="errorMsg">
+          <b> {{ 'IDEA.AUTH.ERROR' | translate }}. </b>
           {{ errorMsg }}
         </p>
         <ion-item>
-          <ion-label
-            position="inline"
-          >
-            <ion-icon
-              name="contact"
-              color="primary"
-            >
-            </ion-icon>
+          <ion-label position="inline">
+            <ion-icon name="contact" color="primary"> </ion-icon>
           </ion-label>
           <ion-input
             type="email"
@@ -45,19 +28,14 @@
             autocomplete="email"
             [placeholder]="t.instant('IDEA.AUTH.EMAIL')"
             [title]="t.instant('IDEA.AUTH.EMAIL_HINT')"
-            [ngModelOptions]="{standalone: true}"
+            [ngModelOptions]="{ standalone: true }"
             [(ngModel)]="email"
             (keyup.enter)="confirmPassword()"
           ></ion-input>
         </ion-item>
         <ion-item>
-          <ion-label
-            position="inline"
-          >
-            <ion-icon
-              name="disc"
-              color="primary"
-            ></ion-icon>
+          <ion-label position="inline">
+            <ion-icon name="disc" color="primary"></ion-icon>
           </ion-label>
           <ion-input
             type="text"
@@ -67,19 +45,14 @@
             autocomplete="off"
             [placeholder]="t.instant('IDEA.AUTH.RESET_CODE')"
             [title]="t.instant('IDEA.AUTH.RESET_CODE_HINT')"
-            [ngModelOptions]="{standalone: true}"
+            [ngModelOptions]="{ standalone: true }"
             [(ngModel)]="code"
             (keyup.enter)="confirmPassword()"
           ></ion-input>
         </ion-item>
         <ion-item>
-          <ion-label
-            position="inline"
-          >
-            <ion-icon
-              name="key"
-              color="primary"
-            ></ion-icon>
+          <ion-label position="inline">
+            <ion-icon name="key" color="primary"></ion-icon>
           </ion-label>
           <ion-input
             type="password"
@@ -91,16 +64,12 @@
             [clearOnEdit]="false"
             [placeholder]="t.instant('IDEA.AUTH.NEW_PASSWORD')"
             [title]="t.instant('IDEA.AUTH.CHOOSE_A_PASSWORD')"
-            [ngModelOptions]="{standalone: true}"
+            [ngModelOptions]="{ standalone: true }"
             [(ngModel)]="newPassword"
             (keyup.enter)="confirmPassword()"
           ></ion-input>
         </ion-item>
-        <ion-button
-          expand="block"
-          [title]="t.instant('IDEA.AUTH.CHANGE_MY_PASSWORD_HINT')"
-          (click)="confirmPassword()"
-        >
+        <ion-button expand="block" [title]="t.instant('IDEA.AUTH.CHANGE_MY_PASSWORD_HINT')" (click)="confirmPassword()">
           {{ 'IDEA.AUTH.CHANGE_MY_PASSWORD' | translate }}
         </ion-button>
         <ion-button
