--- a/idea/auth/newPassword.page.html
+++ b/idea/auth/newPassword.page.html
@@ -1,14 +1,8 @@
 <ion-content>
-  <form
-    class="flexBox"
-  >
-    <ion-card
-      class="authCard"
-    >
+  <form class="flexBox">
+    <ion-card class="authCard">
       <ion-card-header>
-        <ion-card-title
-          color="primary"
-        >
+        <ion-card-title color="primary">
           {{ 'IDEA.AUTH.CHOOSE_A_PASSWORD' | translate }}
         </ion-card-title>
         <ion-card-subtitle>
@@ -16,23 +10,13 @@
         </ion-card-subtitle>
       </ion-card-header>
       <ion-card-content>
-        <p
-          class="errorBox"
-          *ngIf="errorMsg"
-        >
-          <b>
-            {{ 'IDEA.AUTH.ERROR' | translate }}.
-          </b>
+        <p class="errorBox" *ngIf="errorMsg">
+          <b> {{ 'IDEA.AUTH.ERROR' | translate }}. </b>
           {{ errorMsg }}
         </p>
         <ion-item>
-          <ion-label
-            position="inline"
-          >
-            <ion-icon
-              name="key"
-              color="primary"
-            ></ion-icon>
+          <ion-label position="inline">
+            <ion-icon name="key" color="primary"></ion-icon>
           </ion-label>
           <ion-input
             type="password"
@@ -44,7 +28,7 @@
             [clearOnEdit]="false"
             [placeholder]="t.instant('IDEA.AUTH.PASSWORD')"
             [title]="t.instant('IDEA.AUTH.CHOOSE_A_PASSWORD')"
-            [ngModelOptions]="{standalone: true}"
+            [ngModelOptions]="{ standalone: true }"
             [(ngModel)]="newPassword"
             (keyup.enter)="confirmNewPassword()"
           ></ion-input>
