--- a/idea/auth/forgotPassword.page.html
+++ b/idea/auth/forgotPassword.page.html
@@ -1,14 +1,8 @@
 <ion-content>
-  <form
-    class="flexBox"
-  >
-    <ion-card
-      class="authCard"
-    >
+  <form class="flexBox">
+    <ion-card class="authCard">
       <ion-card-header>
-        <ion-card-title
-          color="primary"
-        >
+        <ion-card-title color="primary">
           {{ 'IDEA.AUTH.PASSWORD_RESET' | translate }}
         </ion-card-title>
         <ion-card-subtitle>
@@ -17,14 +11,8 @@
       </ion-card-header>
       <ion-card-content>
         <ion-item>
-          <ion-label
-            position="inline"
-          >
-            <ion-icon
-              name="contact"
-              color="primary"
-            >
-            </ion-icon>
+          <ion-label position="inline">
+            <ion-icon name="contact" color="primary"> </ion-icon>
           </ion-label>
           <ion-input
             type="email"
@@ -36,16 +24,12 @@
             autocomplete="email"
             [placeholder]="t.instant('IDEA.AUTH.EMAIL')"
             [title]="t.instant('IDEA.AUTH.EMAIL_HINT')"
-            [ngModelOptions]="{standalone: true}"
+            [ngModelOptions]="{ standalone: true }"
             [(ngModel)]="email"
             (keyup.enter)="forgotPassword()"
           ></ion-input>
         </ion-item>
-        <ion-button
-          expand="block"
-          [title]="t.instant('IDEA.AUTH.RESET_MY_PASSWORD_HINT')"
-          (click)="forgotPassword()"
-        >
+        <ion-button expand="block" [title]="t.instant('IDEA.AUTH.RESET_MY_PASSWORD_HINT')" (click)="forgotPassword()">
           {{ 'IDEA.AUTH.RESET_MY_PASSWORD' | translate }}
         </ion-button>
         <ion-button
