--- a/idea/auth/resendLink.page.html
+++ b/idea/auth/resendLink.page.html
@@ -1,14 +1,8 @@
 <ion-content>
-  <form
-    class="flexBox"
-  >
-    <ion-card
-      class="authCard"
-    >
+  <form class="flexBox">
+    <ion-card class="authCard">
       <ion-card-header>
-        <ion-card-title
-          color="primary"
-        >
+        <ion-card-title color="primary">
           {{ 'IDEA.AUTH.CONFIRM_ACCOUNT' | translate }}
         </ion-card-title>
         <ion-card-subtitle>
@@ -16,24 +10,13 @@
         </ion-card-subtitle>
       </ion-card-header>
       <ion-card-content>
-        <p
-          class="errorBox"
-          *ngIf="errorMsg"
-        >
-          <b>
-            {{ 'IDEA.AUTH.ERROR' | translate }}.
-          </b>
+        <p class="errorBox" *ngIf="errorMsg">
+          <b> {{ 'IDEA.AUTH.ERROR' | translate }}. </b>
           {{ errorMsg }}
         </p>
         <ion-item>
-          <ion-label
-            position="inline"
-          >
-            <ion-icon
-              name="contact"
-              color="primary"
-            >
-            </ion-icon>
+          <ion-label position="inline">
+            <ion-icon name="contact" color="primary"> </ion-icon>
           </ion-label>
           <ion-input
             type="email"
@@ -45,16 +28,12 @@
             autocomplete="email"
             [placeholder]="t.instant('IDEA.AUTH.EMAIL')"
             [title]="t.instant('IDEA.AUTH.EMAIL_HINT')"
-            [ngModelOptions]="{standalone: true}"
+            [ngModelOptions]="{ standalone: true }"
             [(ngModel)]="email"
             (keyup.enter)="resendConfirmationLink()"
           ></ion-input>
         </ion-item>
-        <ion-button
-          expand="block"
-          [title]="t.instant('IDEA.AUTH.RESEND_LINK_HINT')"
-          (click)="resendConfirmationLink()"
-        >
+        <ion-button expand="block" [title]="t.instant('IDEA.AUTH.RESEND_LINK_HINT')" (click)="resendConfirmationLink()">
           {{ 'IDEA.AUTH.RESEND_LINK' | translate }}
         </ion-button>
         <ion-button
