--- a/idea/auth/signUp.page.html
+++ b/idea/auth/signUp.page.html
@@ -1,14 +1,8 @@
 <ion-content>
-  <form
-    class="flexBox"
-  >
-    <ion-card
-      class="authCard"
-    >
+  <form class="flexBox">
+    <ion-card class="authCard">
       <ion-card-header>
-        <ion-card-title
-          color="primary"
-        >
+        <ion-card-title color="primary">
           {{ 'IDEA.AUTH.NEW_ACCOUNT' | translate }}
         </ion-card-title>
         <ion-card-subtitle>
@@ -16,24 +10,13 @@
         </ion-card-subtitle>
       </ion-card-header>
       <ion-card-content>
-        <p
-          class="errorBox"
-          *ngIf="errorMsg"
-        >
-          <b>
-            {{ 'IDEA.AUTH.ERROR' | translate }}.
-          </b>
+        <p class="errorBox" *ngIf="errorMsg">
+          <b> {{ 'IDEA.AUTH.ERROR' | translate }}. </b>
           {{ errorMsg }}
         </p>
         <ion-item>
-          <ion-label
-            position="inline"
-          >
-            <ion-icon
-              name="contact"
-              color="primary"
-            >
-            </ion-icon>
+          <ion-label position="inline">
+            <ion-icon name="contact" color="primary"> </ion-icon>
           </ion-label>
           <ion-input
             type="email"
@@ -45,19 +28,14 @@
             autocomplete="off"
             [placeholder]="t.instant('IDEA.AUTH.EMAIL')"
             [title]="t.instant('IDEA.AUTH.REGISTRATION_EMAIL_HINT')"
-            [ngModelOptions]="{standalone: true}"
+            [ngModelOptions]="{ standalone: true }"
             [(ngModel)]="email"
             (keyup.enter)="register()"
           ></ion-input>
         </ion-item>
         <ion-item>
-          <ion-label
-            position="inline"
-          >
-            <ion-icon
-              name="key"
-              color="primary"
-            ></ion-icon>
+          <ion-label position="inline">
+            <ion-icon name="key" color="primary"></ion-icon>
           </ion-label>
           <ion-input
             type="password"
@@ -69,7 +47,7 @@
             [clearOnEdit]="false"
             [placeholder]="t.instant('IDEA.AUTH.PASSWORD')"
             [title]="t.instant('IDEA.AUTH.CHOOSE_A_PASSWORD')"
-            [ngModelOptions]="{standalone: true}"
+            [ngModelOptions]="{ standalone: true }"
             [(ngModel)]="password"
             (keyup.enter)="register()"
           ></ion-input>
@@ -81,7 +59,7 @@
           <ion-col>
             <ion-checkbox
               size="small"
-              [ngModelOptions]="{standalone: true}"
+              [ngModelOptions]="{ standalone: true }"
               [(ngModel)]="agreementsCheck"
             ></ion-checkbox>
             {{ 'IDEA.AUTH.AGREEMENTS_CHECK_REGISTRATION' | translate }}:
