--- a/idea/auth/signIn.page.html
+++ b/idea/auth/signIn.page.html
@@ -2,7 +2,7 @@
   <form class="flexBox">
     <div>
       <ion-card class="authCard">
-        <ion-img [title]="t.instant('IDEA.AUTH.SERVICE_LOGO')" [src]="'assets/icons/icon-auth.png'"></ion-img>
+        <ion-img [title]="t.instant('IDEA.AUTH.SERVICE_LOGO')" [src]="'assets/icons/icon-auth.svg'"></ion-img>
         <ion-card-header>
           <ion-card-title color="primary" *ngIf="title">
             {{ title }}
