--- a/idea/echo/echo.page.html
+++ b/idea/echo/echo.page.html
@@ -1,7 +1,7 @@
 <ion-content>
   <div class="flexBox">
     <ion-card class="echoCard maxWidthContainer">
-      <ion-img [src]="'assets/icons/icon-auth.png'"></ion-img>
+      <ion-img [src]="'assets/icons/icon-auth.svg'"></ion-img>
       <ion-card-header>
         <ion-card-title>
           <ion-icon color="success" name="checkmark" *ngIf="success === true"> </ion-icon>
