--- a/idea/account/account.page.html
+++ b/idea/account/account.page.html
@@ -1,7 +1,9 @@
 <ion-header no-border>
   <ion-toolbar class="ideaToolbar">
     <ion-buttons slot="start">
-      <ion-back-button icon="close"></ion-back-button>
+      <ion-button [title]="t.instant('COMMON.CLOSE')" (click)="close()">
+        <ion-icon name="close" slot="icon-only"></ion-icon>
+      </ion-button>
     </ion-buttons>
     <ion-title>
       {{ 'IDEA.ACCOUNT.ACCOUNT' | translate }}
