Improved mobile UX

--- a/idea/account/account.page.html
+++ b/idea/account/account.page.html
@@ -8,7 +8,7 @@
     </ion-title>
   </ion-toolbar>
 </ion-header>
-<ion-content>
+<ion-content class="ion-padding">
   <ion-list lines="full" class="account">
     <ion-item>
       <ion-label position="stacked">
