--- a/idea/teams/teams.page.html
+++ b/idea/teams/teams.page.html
@@ -13,7 +13,7 @@
     </ion-buttons>
   </ion-toolbar>
 </ion-header>
-<ion-content>
+<ion-content class="ion-padding">
   <ion-list lines="full" class="teamsList">
     <p *ngIf="!tc.get('membership')">{{ 'IDEA.TEAMS.YOU_NEED_A_TEAM_TO_CONTINUE' | translate }}.</p>
     <ion-item
