--- a/idea/teams/memberships.page.html
+++ b/idea/teams/memberships.page.html
@@ -13,7 +13,7 @@
     </ion-buttons>
   </ion-toolbar>
 </ion-header>
-<ion-content>
+<ion-content class="ion-padding">
   <ion-list lines="full" class="membershipsList">
     <ion-list-header>
       <ion-label>{{ team?.name }}</ion-label>
