--- a/idea/agenda/calendars.page.html
+++ b/idea/agenda/calendars.page.html
@@ -1,4 +1,4 @@
-<ion-header no-border>
+<ion-header class="ion-no-border">
   <ion-toolbar class="ideaToolbar">
     <ion-buttons slot="start">
       <ion-back-button icon="close" [title]="t.instant('COMMON.CLOSE')"></ion-back-button>
