--- a/idea/auth/forgotPassword.page.html
+++ b/idea/auth/forgotPassword.page.html
@@ -12,7 +12,7 @@
       <ion-card-content>
         <ion-item>
           <ion-label position="inline">
-            <ion-icon name="contact" color="primary"> </ion-icon>
+            <ion-icon name="person-circle" color="primary"> </ion-icon>
           </ion-label>
           <ion-input
             type="email"
