--- a/idea/auth/signUp.page.html
+++ b/idea/auth/signUp.page.html
@@ -16,7 +16,7 @@
         </p>
         <ion-item>
           <ion-label position="inline">
-            <ion-icon name="contact" color="primary"> </ion-icon>
+            <ion-icon name="person-circle" color="primary"> </ion-icon>
           </ion-label>
           <ion-input
             type="email"
