--- a/idea/teams/memberships.page.html
+++ b/idea/teams/memberships.page.html
@@ -1,4 +1,4 @@
-<ion-header no-border>
+<ion-header class="ion-no-border">
   <ion-toolbar class="ideaToolbar">
     <ion-buttons slot="start">
       <ion-back-button icon="close"></ion-back-button>
@@ -50,7 +50,7 @@
         [title]="t.instant('IDEA.TEAMS.ACTIONS_ON_USER_', { user: m.name })"
         (click)="manageMembership(m)"
       >
-        <ion-icon name="more" slot="icon-only"></ion-icon>
+        <ion-icon name="ellipsis-vertical" slot="icon-only"></ion-icon>
       </ion-button>
     </ion-item>
   </ion-list>
