--- a/idea/teams/teams.page.html
+++ b/idea/teams/teams.page.html
@@ -1,4 +1,4 @@
-<ion-header no-border>
+<ion-header class="ion-no-border">
   <ion-toolbar class="ideaToolbar">
     <ion-buttons slot="start">
       <ion-back-button icon="close" *ngIf="tc.get('membership')"></ion-back-button>
