--- a/idea/account/account.page.html
+++ b/idea/account/account.page.html
@@ -15,7 +15,13 @@
         {{ 'IDEA.ACCOUNT.EMAIL' | translate }}
       </ion-label>
       <ion-input type="text" readonly="true" [(ngModel)]="newEmail"> </ion-input>
-      <ion-button slot="end" fill="clear" [title]="t.instant('IDEA.ACCOUNT.SET_A_NEW_EMAIL')" (click)="updateEmail()">
+      <ion-button
+        slot="end"
+        fill="clear"
+        class="marginTop"
+        [title]="t.instant('IDEA.ACCOUNT.SET_A_NEW_EMAIL')"
+        (click)="updateEmail()"
+      >
         <ion-icon name="create" slot="icon-only"></ion-icon>
       </ion-button>
     </ion-item>
@@ -27,6 +33,7 @@
       <ion-button
         slot="end"
         fill="clear"
+        class="marginTop"
         [title]="t.instant('IDEA.ACCOUNT.SET_A_NEW_PASSWORD')"
         (click)="updatePassword()"
       >
