--- a/idea/account/account.page.html
+++ b/idea/account/account.page.html
@@ -22,7 +22,7 @@
         [title]="t.instant('IDEA.ACCOUNT.SET_A_NEW_EMAIL')"
         (click)="updateEmail()"
       >
-        <ion-icon name="create" slot="icon-only"></ion-icon>
+        <ion-icon name="brush" slot="icon-only"></ion-icon>
       </ion-button>
     </ion-item>
     <ion-item>
@@ -37,7 +37,7 @@
         [title]="t.instant('IDEA.ACCOUNT.SET_A_NEW_PASSWORD')"
         (click)="updatePassword()"
       >
-        <ion-icon name="create" slot="icon-only"></ion-icon>
+        <ion-icon name="brush" slot="icon-only"></ion-icon>
       </ion-button>
     </ion-item>
     <ion-list-header class="disruptive">
