--- a/idea/teams/memberships.page.html
+++ b/idea/teams/memberships.page.html
@@ -50,7 +50,7 @@
         [title]="t.instant('IDEA.TEAMS.ACTIONS_ON_USER_', { user: m.name })"
         (click)="manageMembership(m)"
       >
-        <ion-icon name="ellipsis-vertical" slot="icon-only"></ion-icon>
+        <ion-icon name="ellipsis-horizontal-outline" slot="icon-only"></ion-icon>
       </ion-button>
     </ion-item>
   </ion-list>
