--- a/idea/teams/memberships.page.html
+++ b/idea/teams/memberships.page.html
@@ -1,4 +1,4 @@
-<ion-header class="ion-no-border">
+<ion-header>
   <ion-toolbar class="ideaToolbar">
     <ion-buttons slot="start">
       <ion-back-button icon="close"></ion-back-button>
