Announcements and maintenance mode for projects

--- a/idea/echo/echo.page.html
+++ b/idea/echo/echo.page.html
@@ -10,6 +10,7 @@
       </ion-card-header>
       <ion-card-content class="selectable">
         {{ content }}
+        <div class="htmlContent" *ngIf="htmlContent" [innerHTML]="htmlContent"></div>
       </ion-card-content>
       <ion-button
         *ngIf="success === false || success === true"
