--- a/idea/teams/memberships.page.html
+++ b/idea/teams/memberships.page.html
@@ -1,5 +1,5 @@
 <ion-header>
-  <ion-toolbar class="ideaToolbar">
+  <ion-toolbar color="ideaToolbarColor">
     <ion-buttons slot="start">
       <ion-back-button icon="close"></ion-back-button>
     </ion-buttons>
